# qa-helpdesk

./: .dockerignore  .gcloudignore  .gitignore  .mcp.json  .pdca-status.json  .pdca-status.json.bak  CHANGELOG-MOZZI.md  CLAUDE-DETAIL.md  CLAUDE.md  DEV-STATUS.md  Dockerfile  Dockerfile.scripts  IMPLEMENTATION_SUMMARY.md  PERF-REVIEW.md  SESSION-STATE.md  TASK-5필드통합.md  TASK-ANALYSIS-BATCH.md  TASK-BATCH.md  TASK-COLLECT-DAILY-REFACTOR.md  TASK-COLLECTION-REFACTOR.md  TASK-COLLECTION-REVIEW.md  TASK-COLLECTION-V3.md  TASK-CRON-CLEANUP.md  TASK-DB-CLEANUP.md  TASK-DB-RESTRUCTURE.md  TASK-ENV-AUDIT.md  TASK-GCP-MIGRATION.md  TASK-GCP.md  TASK-LP-MOBILE-CRAWL.md  TASK-META-FULL-FIELDS.md  TASK-NIGHT.md  TASK-P0-DEPLOY.md  TASK-P1-BACKFILL.md  TASK-P2-FIVE-AXIS-BATCH.md  TASK-P3-PRESCRIPTION.md  TASK-P4-GCP-PHASE6.md  TASK-PRESCRIPTION.md  TASK-QA버그.md  TASK-QA버그픽스.md  TASK-QA수정8.md  (+92 more)
brick/: pyproject.toml
brick/.bkit/: .bkit
brick/.bkit/audit/: 2026-04-02.jsonl  2026-04-03.jsonl
brick/brick/: CLAUDE.md  __init__.py  brick.db  cli.py
brick/docs/: GUIDE.md  QA-brick-e2e.md  QA-brick-full-3axis.md  QA-brick-full.md  QA-result-codex.md  QA-result-cto1.md  QA-result-cto2.md  QA-result-pm.md  TASK-ROADMAP.md  TODO-brick-e2e.md  agent-skills-research.md  architecture-brick-engine-v2.1.md  architecture-brick-engine-v2.md  architecture-review-codex.md  architecture-review-omc.md  architecture-review-pm.md  bkit-decomposition.md  claude-code-internals.md  design-review-codex.md  design-review-omc.md  guide.html  p2-brick-office-mockup.html  p2-ux-wireframe.html
src/: proxy.ts  (+1 more)
(+2861 files in other folders)
